@@ -10,7 +10,6 @@ import static io.quarkus.deployment.pkg.PackageConfig.JarConfig.JarType.*;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -341,7 +340,7 @@ public class JibProcessor {
             configPath = outputTarget.getOutputDirectory().resolve(configPath);
         }
         try {
-            Files.write(configPath, output.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(configPath, output);
         } catch (IOException e) {
             log.errorf(e, "Unable to write file '%s'.", configPath.toAbsolutePath().toString());
         }
